--- a/app/src/main/res/layout/activity_camion.xml
+++ b/app/src/main/res/layout/activity_camion.xml
@@ -15,129 +15,39 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="64dp"
-            android:background="@android:color/background_light"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:layout_width="209dp"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/textView24"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:text="Aparta tu lugar"
-                    android:textColor="@android:color/holo_blue_dark"
-                    android:textSize="26dp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:id="@+id/imageView6"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/cosetturs" />
-            </LinearLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:layout_width="21dp"
-                android:layout_height="match_parent"
-                android:orientation="vertical"></LinearLayout>
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
                 <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="76dp"
+                    android:layout_width="370dp"
+                    android:layout_height="64dp"
+                    android:background="@android:color/background_light"
                     android:orientation="horizontal">
 
                     <LinearLayout
-                        android:layout_width="156dp"
-                        android:layout_height="68dp"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:id="@+id/textView36"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content" />
-
-                        <TextView
-                            android:id="@+id/textView34"
-                            android:layout_width="118dp"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:text="Ruta" />
-
-                        <Spinner
-                            android:id="@+id/rutass"
-                            android:layout_width="119dp"
-                            android:layout_height="23dp"
-                            android:gravity="center"
-                            android:background="@android:color/holo_blue_dark"
-
-                            android:textColor="@android:color/background_light" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="70dp"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:id="@+id/textView38"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content" />
-
-                        <TextView
-                            android:id="@+id/textView35"
-                            android:layout_width="117dp"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:text="No. de asiento" />
-
-                        <Spinner
-                            android:id="@+id/spinner5"
-                            android:layout_width="119dp"
-                            android:layout_height="24dp"
-                            android:gravity="center"
-                            android:background="@android:color/holo_blue_dark" />
-                    </LinearLayout>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="275dp"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/imageView5"
-                        android:layout_width="286dp"
+                        android:layout_width="107dp"
                         android:layout_height="match_parent"
-                        app:srcCompat="@drawable/auntob" />
+                        android:orientation="vertical">
+
+                        <ImageView
+                            android:id="@+id/imageView6"
+                            android:layout_width="103dp"
+                            android:layout_height="wrap_content"
+                            app:srcCompat="@drawable/cosetturs" />
+                    </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/textView24"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="Aparta tu lugar"
+                        android:textColor="#393d42"
+                        android:textSize="27dp" />
+
                 </LinearLayout>
 
                 <LinearLayout
@@ -146,35 +56,121 @@
                     android:orientation="horizontal">
 
                     <LinearLayout
-                        android:layout_width="94dp"
+                        android:layout_width="21dp"
                         android:layout_height="match_parent"
                         android:orientation="vertical"></LinearLayout>
 
                     <LinearLayout
-                        android:layout_width="102dp"
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:orientation="vertical">
 
-                        <TextView
-                            android:id="@+id/textView39"
+                        <LinearLayout
                             android:layout_width="match_parent"
-                            android:layout_height="6dp" />
+                            android:layout_height="76dp"
+                            android:orientation="horizontal">
 
-                        <Button
-                            android:id="@+id/button4"
-                            android:layout_width="102dp"
-                            android:layout_height="29dp"
-                            android:background="@android:color/holo_blue_dark"
-                            android:text="Finalizar"
-                            android:textColor="@android:color/background_light" />
+                            <LinearLayout
+                                android:layout_width="156dp"
+                                android:layout_height="68dp"
+                                android:orientation="vertical">
+
+                                <TextView
+                                    android:id="@+id/textView36"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content" />
+
+                                <TextView
+                                    android:id="@+id/textView34"
+                                    android:layout_width="118dp"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="center"
+                                    android:text="Ruta" />
+
+                                <Spinner
+                                    android:id="@+id/rutass"
+                                    android:layout_width="119dp"
+                                    android:layout_height="27dp"
+                                    android:background="@android:color/holo_blue_dark"
+                                    android:gravity="center"
+
+                                    android:textColor="@android:color/background_light" />
+
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="70dp"
+                                android:orientation="vertical">
+
+                                <TextView
+                                    android:id="@+id/textView38"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content" />
+
+                                <TextView
+                                    android:id="@+id/textView35"
+                                    android:layout_width="117dp"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="center"
+                                    android:text="No. de asiento" />
+
+                                <Spinner
+                                    android:id="@+id/spinner5"
+                                    android:layout_width="119dp"
+                                    android:layout_height="27dp"
+                                    android:background="@android:color/holo_blue_dark"
+                                    android:gravity="center" />
+                            </LinearLayout>
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="275dp"
+                            android:orientation="vertical">
+
+                            <ImageView
+                                android:id="@+id/imageView5"
+                                android:layout_width="286dp"
+                                android:layout_height="match_parent"
+                                app:srcCompat="@drawable/auntob" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="horizontal">
+
+                            <LinearLayout
+                                android:layout_width="94dp"
+                                android:layout_height="match_parent"
+                                android:orientation="vertical"></LinearLayout>
+
+                            <LinearLayout
+                                android:layout_width="102dp"
+                                android:layout_height="match_parent"
+                                android:orientation="vertical">
+
+                                <TextView
+                                    android:id="@+id/textView39"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="6dp" />
+
+                                <Button
+                                    android:id="@+id/button4"
+                                    android:layout_width="102dp"
+                                    android:layout_height="29dp"
+                                    android:background="@android:color/holo_blue_dark"
+                                    android:text="Finalizar"
+                                    android:textColor="@android:color/background_light" />
+
+                            </LinearLayout>
+                        </LinearLayout>
 
                     </LinearLayout>
+
                 </LinearLayout>
-
             </LinearLayout>
-
-        </LinearLayout>
-    </LinearLayout>
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
