--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,18 +28,15 @@
                     android:orientation="horizontal">
 
                     <LinearLayout
-                        android:layout_width="260dp"
+                        android:layout_width="103dp"
                         android:layout_height="match_parent"
                         android:orientation="vertical">
 
-                        <TextView
-                            android:id="@+id/textView11"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:gravity="center"
-                            android:text="Iniciar Sesion"
-                            android:textColor="@color/colorPrimary"
-                            android:textSize="29dp" />
+                        <ImageView
+                            android:id="@+id/imageView2"
+                            android:layout_width="85dp"
+                            android:layout_height="wrap_content"
+                            app:srcCompat="@drawable/cosetturs" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -47,11 +44,14 @@
                         android:layout_height="match_parent"
                         android:orientation="vertical">
 
-                        <ImageView
-                            android:id="@+id/imageView2"
+                        <TextView
+                            android:id="@+id/textView11"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            app:srcCompat="@drawable/cosetturs" />
+                            android:layout_height="match_parent"
+                            android:gravity="center_vertical"
+                            android:textColor="#393d42"
+                            android:textSize="27dp"
+                            android:text="Iniciar Sesion" />
                     </LinearLayout>
                 </LinearLayout>
 
@@ -69,7 +69,7 @@
 
                     <ImageView
                         android:id="@+id/imageView3"
-                        android:layout_width="336dp"
+                        android:layout_width="match_parent"
                         android:layout_height="141dp"
                         android:layout_weight="1"
                         app:srcCompat="@drawable/login" />
@@ -82,7 +82,7 @@
 
 
                     <LinearLayout
-                        android:layout_width="26dp"
+                        android:layout_width="47dp"
                         android:layout_height="match_parent"
                         android:orientation="vertical">
 
@@ -103,16 +103,16 @@
                             android:id="@+id/textView3"
                             android:layout_width="match_parent"
                             android:layout_height="45dp"
-
-                            android:text="                       Usuario    "
+android:gravity="bottom"
+                            android:text="Usuario"
                             android:textSize="19dp" />
 
                         <TextView
                             android:id="@+id/textView5"
                             android:layout_width="match_parent"
                             android:layout_height="45dp"
-
-                            android:text="                 Contraseña"
+                            android:gravity="bottom"
+                            android:text="Contraseña"
 
                             android:textSize="19dp" />
 
@@ -157,7 +157,7 @@
 
                         <EditText
                             android:id="@+id/editText"
-                            android:layout_width="133dp"
+                            android:layout_width="143dp"
                             android:layout_height="wrap_content"
                             android:ems="10"
                             android:gravity="center"
@@ -165,7 +165,7 @@
 
                         <EditText
                             android:id="@+id/editText2"
-                            android:layout_width="134dp"
+                            android:layout_width="145dp"
                             android:layout_height="wrap_content"
                             android:ems="10"
                             android:gravity="center"
