--- a/app/src/main/res/layout/activity_recuperar.xml
+++ b/app/src/main/res/layout/activity_recuperar.xml
@@ -18,23 +18,15 @@
             android:orientation="horizontal">
 
             <LinearLayout
-                android:layout_width="211dp"
+                android:layout_width="89dp"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/textView23"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-
-                <TextView
-                    android:id="@+id/textView22"
-                    android:layout_width="match_parent"
-                    android:layout_height="47dp"
-                    android:gravity="center"
-                    android:text="Recuperar Contraseña"
-                    android:textColor="@color/colorPrimary"
-                    android:textSize="20dp" />
+                <ImageView
+                    android:id="@+id/imageView8"
+                    android:layout_width="76dp"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/cosetturs" />
             </LinearLayout>
 
             <LinearLayout
@@ -42,11 +34,14 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-                <ImageView
-                    android:id="@+id/imageView4"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@mipmap/cosetturs" />
+                <TextView
+                    android:id="@+id/textView22"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="Recuperar Contraseña"
+                    android:textColor="#393d42"
+                    android:textSize="20dp" />
             </LinearLayout>
         </LinearLayout>
 
@@ -57,12 +52,12 @@
             android:orientation="horizontal">
 
             <LinearLayout
-                android:layout_width="25dp"
+                android:layout_width="15dp"
                 android:layout_height="match_parent"
                 android:orientation="vertical"></LinearLayout>
 
             <LinearLayout
-                android:layout_width="79dp"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
@@ -75,15 +70,19 @@
                     android:id="@+id/textView12"
                     android:layout_width="match_parent"
                     android:layout_height="57dp"
-                    android:text="                                                        Correo"
-                    android:textColor="@color/colorPrimary" />
+                    android:gravity="bottom"
+                    android:text="Correo"
+                    android:textColor="#393d42"
+                    android:textSize="18dp" />
 
                 <TextView
                     android:id="@+id/textView13"
                     android:layout_width="match_parent"
                     android:layout_height="44dp"
-                    android:text="                                                    Confirmar"
-                    android:textColor="@color/colorPrimary" />
+                    android:gravity="bottom"
+                    android:text="Confirmar"
+                    android:textColor="#393d42"
+                    android:textSize="18dp" />
             </LinearLayout>
 
             <LinearLayout
@@ -99,13 +98,13 @@
                 <EditText
                     android:id="@+id/editText5"
                     android:layout_width="202dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="56dp"
                     android:ems="10"
                     android:inputType="textEmailAddress" />
 
                 <EditText
                     android:id="@+id/editText6"
-                    android:layout_width="200dp"
+                    android:layout_width="203dp"
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:inputType="textEmailAddress" />
@@ -117,11 +116,11 @@
 
                 <Button
                     android:id="@+id/button"
-                    android:layout_width="112dp"
-                    android:layout_height="38dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="24dp"
                     android:background="@android:color/holo_blue_dark"
-                    android:textColor="#ffffff"
-                    android:text="Enviar" />
+                    android:text="Enviar"
+                    android:textColor="#ffffff" />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
