--- a/app/src/main/res/layout/activity_camion.xml
+++ b/app/src/main/res/layout/activity_camion.xml
@@ -27,26 +27,31 @@
                     android:orientation="horizontal">
 
                     <LinearLayout
-                        android:layout_width="107dp"
+                        android:layout_width="109dp"
                         android:layout_height="match_parent"
                         android:orientation="vertical">
 
                         <ImageView
                             android:id="@+id/imageView6"
-                            android:layout_width="103dp"
+                            android:layout_width="88dp"
                             android:layout_height="wrap_content"
                             app:srcCompat="@drawable/cosetturs" />
                     </LinearLayout>
 
-                    <TextView
-                        android:id="@+id/textView24"
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="Aparta tu lugar"
-                        android:textColor="#393d42"
-                        android:textSize="27dp" />
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/textView21"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:gravity=""
+                            android:text="Aparta tu lugar"
+                            android:textColor="#393d42"
+                            android:textSize="25dp" />
+                    </LinearLayout>
 
                 </LinearLayout>
 
