--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -203,6 +203,11 @@
                         android:layout_height="match_parent"
                         android:orientation="vertical">
 
+                        <TextView
+                            android:id="@+id/textView18"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
+
                         <Button
                             android:id="@+id/res"
                             android:layout_width="match_parent"
