--- a/app/src/main/res/layout/activity_rutas.xml
+++ b/app/src/main/res/layout/activity_rutas.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".rutas">
@@ -48,10 +49,93 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="335dp"
+            android:layout_height="388dp"
             android:orientation="horizontal">
 
+            <HorizontalScrollView
+                android:id="@+id/horizontalScrollView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/your_id"
+                android:scrollbars="none">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:padding="2dp">
+
+                    <android.support.v7.widget.CardView
+                        android:id="@+id/cardThree"
+                        android:layout_width="400dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="2dp"
+                        android:layout_toEndOf="@+id/cardTwo"
+                        android:padding="2dp">
+
+
+                        <ImageView
+                            android:id="@+id/imageView11"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            app:srcCompat="@drawable/poster2white" />
+                    </android.support.v7.widget.CardView>
+
+                    <android.support.v7.widget.CardView
+                        android:id="@+id/cardOne"
+                        android:layout_width="400dp"
+                        android:layout_height="match_parent"
+                        android:layout_toEndOf="@+id/cardfor"
+                        android:padding="2dp">
+
+
+                        <ImageView
+                            android:id="@+id/imageView12"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            app:srcCompat="@drawable/poster3white" />
+                    </android.support.v7.widget.CardView>
+
+
+                    <android.support.v7.widget.CardView
+                        android:id="@+id/cardfor"
+                        android:layout_width="400dp"
+                        android:layout_height="match_parent"
+                        android:padding="2dp">
+
+
+                        <ImageView
+                            android:id="@+id/imageView17"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            app:srcCompat="@drawable/poster4white" />
+                    </android.support.v7.widget.CardView>
+
+
+
+
+
+                    <android.support.v7.widget.CardView
+                        android:id="@+id/cardTwo"
+                        android:layout_width="400dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="2dp"
+                        android:layout_toEndOf="@+id/cardOne"
+                        android:padding="2dp">
+
+
+                        <ImageView
+                            android:id="@+id/imageView13"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            app:srcCompat="@drawable/poster5white" />
+                    </android.support.v7.widget.CardView>
+                </RelativeLayout>
+            </HorizontalScrollView>
+
+
         </LinearLayout>
+
 
         <LinearLayout
             android:layout_width="match_parent"
