--- a/app/src/main/res/menu/activity_menu_drawer.xml
+++ b/app/src/main/res/menu/activity_menu_drawer.xml
@@ -6,12 +6,12 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/rutas"
-            android:icon="@drawable/descarga"
-            android:title="Rutas" />
+            android:icon="@drawable/ruts"
+            android:title="Rutas de Servicio" />
         <item
             android:id="@+id/elgir"
-            android:icon="@drawable/as"
-            android:title="Elegir camion" />
+            android:icon="@drawable/autoss"
+            android:title="Elegir Camion" />
 
     </group>
 
@@ -20,7 +20,7 @@
             <item
                 android:id="@+id/nav_share"
                 android:icon="@drawable/ic_menu_share"
-                android:title="pagiona web" />
+                android:title="Pagina web" />
             <item
                 android:id="@+id/nav_send"
                 android:icon="@drawable/ic_menu_send"
