--- a/app/src/main/res/menu/activity_menu_drawer.xml
+++ b/app/src/main/res/menu/activity_menu_drawer.xml
@@ -19,12 +19,12 @@
         <menu>
             <item
                 android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Pagina web" />
+                android:icon="@drawable/loh"
+                android:title="Visita nuestra pagina" />
             <item
                 android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Gmail" />
+                android:icon="@drawable/mails"
+                android:title="Enviar correo" />
         </menu>
     </item>
 
