--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -137,7 +137,7 @@
                             android:layout_height="wrap_content" />
 
                         <EditText
-                            android:id="@+id/user"
+                            android:id="@+id/usuari"
                             android:layout_width="match_parent"
                             android:layout_height="57dp"
                             android:ems="10"
