--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -90,43 +90,41 @@
                             android:layout_width="match_parent"
                             android:layout_height="56dp"
                             android:orientation="horizontal">
-
+                            <TextView
+                                android:layout_width="30dp"
+                                android:layout_height="32dp" />
                             <TextView
                                 android:id="@+id/user"
-                                android:layout_width="108dp"
+                                android:layout_width="140dp"
                                 android:layout_height="match_parent"
-                                android:layout_weight="1"
-                                android:gravity="bottom|right"
+                                android:gravity="bottom"
                                 android:text="Usuario       :"
                                 android:textColor="#393d42"
                                 android:textSize="23dp" />
 
                             <EditText
                                 android:id="@+id/users"
-                                android:layout_width="109dp"
+                                android:layout_width="150dp"
                                 android:layout_height="match_parent"
-                                android:layout_weight="1"
+                                android:gravity="bottom"
                                 android:ems="10"
                                 android:inputType="textPersonName" />
 
-                            <TextView
-                                android:id="@+id/textView5"
-                                android:layout_width="wrap_content"
-                                android:layout_height="56dp"
-                                android:layout_weight="1" />
                         </LinearLayout>
 
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="59dp"
                             android:orientation="horizontal">
-
+                            <TextView
+                                android:layout_width="30dp"
+                                android:layout_height="32dp" />
                             <TextView
                                 android:id="@+id/textView3"
-                                android:layout_width="109dp"
+                                android:layout_width="140dp"
                                 android:layout_height="match_parent"
-                                android:layout_weight="1"
-                                android:gravity="bottom|right"
+
+                                android:gravity="bottom"
                                 android:text="Contraseña :"
                                 android:textColor="#393d42"
 
@@ -134,45 +132,56 @@
 
                             <EditText
                                 android:id="@+id/contraseña"
-                                android:layout_width="111dp"
+                                android:layout_width="150dp"
                                 android:layout_height="match_parent"
-                                android:layout_weight="1"
+                                android:gravity="bottom"
                                 android:ems="10"
                                 android:inputType="textPassword" />
 
-                            <TextView
-                                android:id="@+id/textView6"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1" />
                         </LinearLayout>
 
-                        <RelativeLayout
+                        <LinearLayout
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent">
+                            android:layout_height="match_parent"
+                            android:orientation="vertical">
 
-                            <Button
-                                android:id="@+id/in"
-                                android:layout_width="130dp"
-                                android:layout_height="34dp"
-                                android:layout_alignParentStart="true"
-                                android:layout_centerVertical="true"
-                                android:layout_marginStart="29dp"
-                                android:background="@android:color/holo_blue_dark"
-                                android:text="Iniciar sesion"
-                                android:textColor="@android:color/background_light" />
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="24dp"
+                                android:orientation="horizontal"></LinearLayout>
 
-                            <Button
-                                android:id="@+id/re"
-                                android:layout_width="130dp"
+                            <LinearLayout
+                                android:layout_width="match_parent"
                                 android:layout_height="34dp"
-                                android:layout_alignParentEnd="true"
-                                android:layout_centerVertical="true"
-                                android:layout_marginEnd="98dp"
-                                android:background="@android:color/holo_blue_dark"
-                                android:text="registrarse"
-                                android:textColor="@android:color/background_light" />
-                        </RelativeLayout>
+                                android:orientation="horizontal">
+
+                                <TextView
+                                    android:layout_width="30dp"
+                                android:layout_height="32dp" />
+                                <Button
+                                    android:id="@+id/in"
+                                    android:layout_width="130dp"
+                                    android:layout_height="34dp"
+                                    android:layout_centerVertical="true"
+                                    android:background="@android:color/holo_blue_dark"
+                                    android:text="Iniciar sesion"
+                                    android:textColor="@android:color/background_light" />
+
+
+                                <TextView
+                                    android:layout_width="20dp"
+                                    android:layout_height="32dp" />
+                                <Button
+                                    android:id="@+id/re"
+                                    android:layout_width="130dp"
+                                    android:layout_height="34dp"
+                                    android:layout_centerVertical="true"
+                                    android:background="@android:color/holo_blue_dark"
+                                    android:text="registrarse"
+                                    android:textColor="@android:color/background_light" />
+                            </LinearLayout>
+
+                        </LinearLayout>
                     </LinearLayout>
 
                 </LinearLayout>
