--- a/app/src/main/res/layout/activity_camion.xml
+++ b/app/src/main/res/layout/activity_camion.xml
@@ -133,17 +133,17 @@
 
                             <TextView
                                 android:layout_width="match_parent"
-                                android:layout_height="20dp" />
+                                android:layout_height="10dp" />
 
                             <Button
                                 android:id="@+id/button3"
                                 android:layout_width="110dp"
-                                android:layout_height="20dp"
+                                android:layout_height="31dp"
                                 android:layout_gravity="center"
-                                android:gravity="center"
                                 android:background="@android:color/holo_blue_dark"
-                                android:textColor="@android:color/background_light"
-                                android:text="Finalizar" />
+                                android:gravity="center"
+                                android:text="Finalizar"
+                                android:textColor="@android:color/background_light" />
                         </LinearLayout>
                     </ScrollView>
                 </LinearLayout>
