--- a/app/src/main/res/layout/activity_camion.xml
+++ b/app/src/main/res/layout/activity_camion.xml
@@ -140,7 +140,7 @@
                                 android:layout_width="110dp"
                                 android:layout_height="31dp"
                                 android:layout_gravity="center"
-                                android:background="@android:color/holo_blue_dark"
+                                android:background="@drawable/botones"
                                 android:gravity="center"
                                 android:text="Finalizar"
                                 android:textColor="@android:color/background_light" />
