--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -95,7 +95,7 @@
                                 android:layout_height="32dp" />
                             <TextView
                                 android:id="@+id/user"
-                                android:layout_width="140dp"
+                                android:layout_width="130dp"
                                 android:layout_height="match_parent"
                                 android:gravity="bottom"
                                 android:text="Usuario       :"
@@ -119,13 +119,14 @@
                             <TextView
                                 android:layout_width="30dp"
                                 android:layout_height="32dp" />
+
                             <TextView
                                 android:id="@+id/textView3"
-                                android:layout_width="140dp"
+                                android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
 
                                 android:gravity="bottom"
-                                android:text="Contraseña :"
+                                android:text="Contraseña:"
                                 android:textColor="#393d42"
 
                                 android:textSize="23dp" />
@@ -158,12 +159,13 @@
                                 <TextView
                                     android:layout_width="30dp"
                                 android:layout_height="32dp" />
+
                                 <Button
                                     android:id="@+id/in"
                                     android:layout_width="130dp"
                                     android:layout_height="34dp"
                                     android:layout_centerVertical="true"
-                                    android:background="@android:color/holo_blue_dark"
+                                    android:background="@drawable/botones"
                                     android:text="Iniciar sesion"
                                     android:textColor="@android:color/background_light" />
 
@@ -171,12 +173,13 @@
                                 <TextView
                                     android:layout_width="20dp"
                                     android:layout_height="32dp" />
+
                                 <Button
                                     android:id="@+id/re"
                                     android:layout_width="130dp"
                                     android:layout_height="34dp"
                                     android:layout_centerVertical="true"
-                                    android:background="@android:color/holo_blue_dark"
+                                    android:background="@drawable/botones"
                                     android:text="registrarse"
                                     android:textColor="@android:color/background_light" />
                             </LinearLayout>
