--- a/app/src/main/res/layout/activity_recuperar.xml
+++ b/app/src/main/res/layout/activity_recuperar.xml
@@ -49,80 +49,55 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/stilo"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="15dp"
-                android:layout_height="match_parent"
-                android:orientation="vertical"></LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/textView7"
-                    android:layout_width="match_parent"
-                    android:layout_height="37dp" />
-
-                <TextView
-                    android:id="@+id/textView12"
-                    android:layout_width="match_parent"
-                    android:layout_height="57dp"
-                    android:gravity="bottom"
-                    android:text="Correo"
-                    android:textColor="#393d42"
-                    android:textSize="18dp" />
-
-                <TextView
-                    android:id="@+id/textView13"
-                    android:layout_width="match_parent"
-                    android:layout_height="44dp"
-                    android:gravity="bottom"
-                    android:text="Confirmar"
-                    android:textColor="#393d42"
-                    android:textSize="18dp" />
-            </LinearLayout>
-
-            <LinearLayout
+            <TextView
+                android:id="@+id/textView8"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:layout_height="38dp" />
 
-                <TextView
-                    android:id="@+id/textView8"
-                    android:layout_width="match_parent"
-                    android:layout_height="38dp" />
+            <EditText
+                android:id="@+id/correo1"
+                android:layout_width="250dp"
+                android:layout_height="36dp"
+                android:layout_gravity="center"
+                android:background="@drawable/conotor"
+                android:ems="10"
+                android:inputType="textEmailAddress" />
 
-                <EditText
-                    android:id="@+id/editText5"
-                    android:layout_width="202dp"
-                    android:layout_height="56dp"
-                    android:ems="10"
-                    android:inputType="textEmailAddress" />
+            <TextView
+                android:id="@+id/textView10"
+                android:layout_width="match_parent"
+                android:layout_height="33dp"
+                android:gravity="center"
+                android:textSize="20dp" />
 
-                <EditText
-                    android:id="@+id/editText6"
-                    android:layout_width="203dp"
-                    android:layout_height="wrap_content"
-                    android:ems="10"
-                    android:inputType="textEmailAddress" />
+            <EditText
+                android:id="@+id/correo2"
+                android:layout_width="250dp"
+                android:layout_height="36dp"
+                android:layout_gravity="center"
+                android:background="@drawable/conotor"
+                android:ems="10"
+                android:inputType="textEmailAddress" />
 
-                <TextView
-                    android:id="@+id/textView14"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/textView12"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:gravity="center"
+                android:textSize="20dp" />
 
-                <Button
-                    android:id="@+id/button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="24dp"
-                    android:background="@android:color/holo_blue_dark"
-                    android:text="Enviar"
-                    android:textColor="#ffffff" />
-            </LinearLayout>
+            <Button
+                android:id="@+id/button5"
+                android:layout_width="120dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:textColor="@android:color/background_light"
+                android:background="@drawable/botones"
+                android:text="recuperar" />
         </LinearLayout>
+
     </LinearLayout>
 
 </LinearLayout>
