--- a/app/src/main/res/layout/activity_camion.xml
+++ b/app/src/main/res/layout/activity_camion.xml
@@ -21,19 +21,19 @@
                     android:orientation="horizontal">
 
                     <LinearLayout
-                        android:layout_width="109dp"
+                        android:layout_width="93dp"
                         android:layout_height="match_parent"
                         android:orientation="vertical">
 
                         <ImageView
                             android:id="@+id/imageView6"
-                            android:layout_width="88dp"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             app:srcCompat="@drawable/cosetturs" />
                     </LinearLayout>
 
                     <LinearLayout
-                        android:layout_width="277dp"
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:orientation="vertical">
 
@@ -41,7 +41,7 @@
                             android:id="@+id/textView21"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:gravity=""
+                            android:gravity="center"
                             android:text="Aparta tu lugar"
                             android:textColor="#393d42"
                             android:textSize="25dp" />
@@ -78,7 +78,7 @@
 
                                     <TextView
                                         android:id="@+id/textView5"
-                                        android:layout_width="80dp"
+                                        android:layout_width="100dp"
                                         android:layout_height="match_parent"
                                         android:layout_margin="9dp"
                                         android:gravity="bottom"
@@ -88,7 +88,7 @@
 
                                     <Spinner
                                         android:id="@+id/rutass"
-                                        android:layout_width="130dp"
+                                        android:layout_width="160dp"
                                         android:layout_height="match_parent"
                                         android:layout_margin="5dp"
                                         android:background="@drawable/spinerss" />
@@ -104,7 +104,7 @@
 
                                     <TextView
                                         android:id="@+id/lugar"
-                                        android:layout_width="80dp"
+                                        android:layout_width="100dp"
                                         android:layout_height="match_parent"
                                         android:layout_margin="9dp"
                                         android:gravity="bottom"
@@ -114,7 +114,7 @@
 
                                     <Spinner
                                         android:id="@+id/spinner2"
-                                        android:layout_width="130dp"
+                                        android:layout_width="160dp"
                                         android:layout_height="match_parent"
                                         android:layout_margin="5dp"
                                         android:background="@drawable/spinerss" />
@@ -123,29 +123,34 @@
 
                             <LinearLayout
                                 android:layout_width="match_parent"
-                                android:layout_height="282dp"
+                                android:layout_height="match_parent"
                                 android:orientation="vertical">
 
                                 <ImageView
                                     android:id="@+id/imageView5"
-                                    android:layout_width="match_parent"
+                                    android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
+                                    android:layout_gravity="center"
                                     app:srcCompat="@drawable/auntob" />
+
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="10dp" />
+
+                                <Button
+                                    android:id="@+id/ssc"
+                                    android:layout_width="230dp"
+                                    android:layout_height="31dp"
+                                    android:layout_gravity="center"
+                                    android:background="@drawable/botones"
+                                    android:gravity="center"
+                                    android:text="¡¡suscribete!!"
+                                    android:textColor="@android:color/background_light" />
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="10dp" />
                             </LinearLayout>
 
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="10dp" />
-
-                            <Button
-                                android:id="@+id/button3"
-                                android:layout_width="110dp"
-                                android:layout_height="31dp"
-                                android:layout_gravity="center"
-                                android:background="@drawable/botones"
-                                android:gravity="center"
-                                android:text="Finalizar"
-                                android:textColor="@android:color/background_light" />
                         </LinearLayout>
                     </ScrollView>
                 </LinearLayout>
