--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,14 +28,14 @@
                     android:orientation="horizontal">
 
                     <LinearLayout
-                        android:layout_width="103dp"
+                        android:layout_width="102dp"
                         android:layout_height="match_parent"
                         android:orientation="vertical">
 
                         <ImageView
                             android:id="@+id/imageView2"
-                            android:layout_width="85dp"
-                            android:layout_height="wrap_content"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
                             app:srcCompat="@drawable/cosetturs" />
                     </LinearLayout>
 
@@ -48,8 +48,8 @@
                             android:id="@+id/textView11"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:gravity="center_vertical"
-                            android:text="Iniciar Sesion"
+                            android:gravity="center"
+                            android:text="Iniciar Sesion        "
                             android:textColor="#393d42"
                             android:textSize="27dp" />
                     </LinearLayout>
