--- a/app/src/main/res/layout/activity_rutas.xml
+++ b/app/src/main/res/layout/activity_rutas.xml
@@ -49,7 +49,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="417dp"
+            android:layout_height="match_parent"
             android:orientation="horizontal">
 
             <HorizontalScrollView
@@ -67,7 +67,7 @@
 
                     <android.support.v7.widget.CardView
                         android:id="@+id/cardThree"
-                        android:layout_width="400dp"
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginStart="2dp"
                         android:layout_toEndOf="@+id/cardTwo"
@@ -83,7 +83,7 @@
 
                     <android.support.v7.widget.CardView
                         android:id="@+id/cardOne"
-                        android:layout_width="400dp"
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_toEndOf="@+id/cardfor"
                         android:padding="2dp">
@@ -99,7 +99,7 @@
 
                     <android.support.v7.widget.CardView
                         android:id="@+id/cardfor"
-                        android:layout_width="400dp"
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:padding="2dp">
 
@@ -114,7 +114,7 @@
 
                     <android.support.v7.widget.CardView
                         android:id="@+id/cardTwo"
-                        android:layout_width="400dp"
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginStart="2dp"
                         android:layout_toEndOf="@+id/cardOne"
