--- a/app/src/main/res/layout/content_menu.xml
+++ b/app/src/main/res/layout/content_menu.xml
@@ -32,11 +32,10 @@
 
     </LinearLayout>
 
-    <FrameLayout
+    <WebView
+        android:id="@+id/we"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    </FrameLayout>
+        android:layout_height="match_parent" />
 
 
 </LinearLayout>
