--- a/app/src/main/res/layout/content_menu.xml
+++ b/app/src/main/res/layout/content_menu.xml
@@ -18,24 +18,40 @@
 
         <ImageView
             android:id="@+id/imageView7"
-            android:layout_width="100dp"
+            android:layout_width="119dp"
+
             android:layout_height="match_parent"
             app:srcCompat="@drawable/cosetturs" />
+
         <TextView
-            android:id="@+id/textView11"
+            android:id="@+id/texto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="Bienvenido         "
+            android:gravity="center_vertical"
+            android:layout_margin="10dp"
+            android:text="Bienvenido"
             android:textColor="#393d42"
             android:textSize="27dp" />
 
     </LinearLayout>
-
     <WebView
         android:id="@+id/we"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        />
+
+    <LinearLayout
+        android:id="@+id/fr"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <FrameLayout
+            android:id="@+id/contenedor"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
 
+        </FrameLayout>
+
+    </LinearLayout>
 </LinearLayout>
