--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,20 +23,20 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="60dp"
+                    android:layout_height="50dp"
                     android:background="@android:color/background_light"
                     android:orientation="horizontal">
 
                     <LinearLayout
-                        android:layout_width="102dp"
+                        android:layout_width="77dp"
                         android:layout_height="match_parent"
                         android:orientation="vertical">
 
                         <ImageView
                             android:id="@+id/imageView2"
-                            android:layout_width="match_parent"
+                            android:layout_width="79dp"
                             android:layout_height="match_parent"
-                            app:srcCompat="@drawable/cosetturs" />
+                            app:srcCompat="@drawable/logo1" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -49,7 +49,7 @@
                             style="?android:attr/progressBarStyle"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:visibility="gone"/>
+                            android:visibility="gone" />
 
                         <TextView
                             android:id="@+id/textView11"
@@ -219,9 +219,18 @@
                     android:background="@android:color/transparent"
                     android:text="¡¡registrate!!"
                     android:textColor="#800080" />
+                <!--- <Button
+                     android:id="@+id/goo"
+                     android:layout_width="250dp"
+                     android:layout_height="34dp"
+                     android:layout_gravity="center"
+                     android:textSize="15dp"
+                     android:background="@android:color/transparent"
+                     android:text="Autenticate con Google"
+                     android:textColor="#800000" /> -->
 
 
-            </LinearLayout>
-        </LinearLayout>
-    </ScrollView>
-</LinearLayout>
+             </LinearLayout>
+         </LinearLayout>
+     </ScrollView>
+ </LinearLayout>
