--- a/app/src/main/res/layout/activity_mision.xml
+++ b/app/src/main/res/layout/activity_mision.xml
@@ -26,7 +26,7 @@
             android:id="@+id/imageView7"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/cosetturs" />
+            app:srcCompat="@drawable/logo1" />
     </LinearLayout>
 
     <LinearLayout
