--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -17,21 +17,21 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="72dp"
+                    android:layout_height="50dp"
                     android:background="@android:color/background_light"
                     android:orientation="horizontal">
 
 
                     <LinearLayout
-                        android:layout_width="89dp"
+                        android:layout_width="74dp"
                         android:layout_height="match_parent"
                         android:orientation="vertical">
 
                         <ImageView
                             android:id="@+id/imageView4"
-                            android:layout_width="match_parent"
+                            android:layout_width="75dp"
                             android:layout_height="wrap_content"
-                            app:srcCompat="@drawable/cosetturs" />
+                            app:srcCompat="@drawable/logo1" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -42,9 +42,9 @@
                         <TextView
                             android:id="@+id/textView16"
                             android:layout_width="match_parent"
-                            android:layout_height="80dp"
+                            android:layout_height="match_parent"
                             android:gravity="center"
-                            android:text="Registrar"
+                            android:text="Registrar         "
                             android:textColor="#393d42"
                             android:textSize="27dp" />
                     </LinearLayout>
