--- a/app/src/main/res/layout/content_menu.xml
+++ b/app/src/main/res/layout/content_menu.xml
@@ -13,15 +13,15 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="50dp"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/imageView7"
-            android:layout_width="119dp"
+            android:layout_width="87dp"
 
             android:layout_height="match_parent"
-            app:srcCompat="@drawable/cosetturs" />
+            app:srcCompat="@drawable/logo1" />
 
         <TextView
             android:id="@+id/texto"
