CAMBIO DE PAQUETES

--- a/app/src/main/res/menu/activity_menu_drawer.xml
+++ b/app/src/main/res/menu/activity_menu_drawer.xml
@@ -23,6 +23,7 @@
         <item
             android:id="@+id/pago"
             android:icon="@drawable/paypal"
+            android:visible="false"
             android:title="Pagar Cuota" />
 
     </group>
