--- a/app/src/main/res/layout/activity_rutas.xml
+++ b/app/src/main/res/layout/activity_rutas.xml
@@ -25,7 +25,7 @@
                 android:orientation="vertical">
 
                 <ImageView
-                    android:id="@+id/imageView9"
+                    android:id="@+id/atr"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     app:srcCompat="@drawable/arriw" />
@@ -78,7 +78,7 @@
                             android:id="@+id/imageView11"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            app:srcCompat="@drawable/ciz" />
+                            app:srcCompat="@drawable/cisco" />
                     </android.support.v7.widget.CardView>
 
                     <android.support.v7.widget.CardView
@@ -109,7 +109,16 @@
                             android:id="@+id/imageView17"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            app:srcCompat="@drawable/noc" />
+                            app:srcCompat="@drawable/noche" />
+
+                        <TextView
+                            android:id="@+id/textView"
+                            android:layout_width="200dp"
+                            android:layout_height="50dp"
+                            android:layout_gravity="center_vertical"
+                            android:textSize="35dp"
+                            android:textColor="@color/colorPrimary"
+                            android:text="Desliza" />
                     </android.support.v7.widget.CardView>
 
 
@@ -126,7 +135,7 @@
                             android:id="@+id/imageView13"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            app:srcCompat="@drawable/nau" />
+                            app:srcCompat="@drawable/naa" />
                     </android.support.v7.widget.CardView>
 
                     <android.support.v7.widget.CardView
@@ -142,7 +151,7 @@
                             android:id="@+id/ima"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            app:srcCompat="@drawable/poster4white" />
+                            app:srcCompat="@drawable/tlane" />
                     </android.support.v7.widget.CardView>
                 </RelativeLayout>
             </HorizontalScrollView>
